2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (LoadFont): Warn if a font to be
	embedded in PDF output cannot be located in the "download" file.

	Fixes <https://savannah.gnu.org/bugs/?62572>.  Thanks to Deri
	James.

2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/a4.tmac: Drop file from distribution.  It has been
	superseded by papersize.tmac for nearly 20 years.
	* tmac/tmac.am (TMACNORMALFILES): Delete reference.
	* NEWS: Add item.

	Fixes <https://savannah.gnu.org/bugs/?62569>.

2022-06-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Parameterize X11-related man pages, so they don't get
	spuriously generated (and not cleaned) when building with X11
	support disabled.

	* Makefile.am (.man): Fix logic nit: drop unnecessary removal of
	target before clobbering it with sed.
	* src/devices/xditview/xditview.am (GXDITVIEW_MAN1): Add new
	macro, expanding to nothing if `WITHOUT_X11` and to the target
	name otherwise.
	(man1_MANS): Append `GXDITVIEW_MAN1` expansion, not a literal.
	* src/devices/xditview/xditview.am (XTOTROFF_MAN1): Add new
	macro, expanding to nothing if `WITHOUT_X11` and to the target
	name otherwise.
	(man1_MANS): Append `XTOTROFF_MAN1` expansion, not a literal.
	* doc/doc.am (GROFF_MAN_PAGES1): Append foregoing expansions
	instead of literals.

2022-06-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Add `AM_CONDITIONAL`: `HAVE_URW_FONTS`, so our
	Automake files can more easily cope with their absence.
	* font/devpdf/Foundry.in: Add easily matched phrases to
	comments, to clearly delimit the URW foundry portion of the file
	so it can be omitted if those fonts are absent.
	* font/devpdf/devpdf.am (font/devpdf/Foundry): Generate file
	differently depending on `HAVE_URW_FONTS`; keep the existing
	procedure if true, and delete the URW section from the generated
	file otherwise, avoiding diagnostic messages from afmtodit(1)